2001-05-30  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/rpf/rpf.c: Modified capabilities returned to have real
	information about each layer instead of just dummy global bounds info.

2001-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/gdal: added contributed GDAL raster server.

	* ogdi/c-api/client.c: clear autoCache in cln_SelectRegion().

2001-04-19  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_info/ogdi_info.c: improve region bounds reporting.

	* external/expat: config.h, makefile: make portable

	* external/expat/makefile, external/zlib/makefile: only create
	a dynamic library, not a static one.

	* external/expat/expat_ogdi.def: created.

	* config/common.mak: make soft link from libogdi.so to libogdi31.so 
	during install.

	* Updated test suite for dted/ecstile.c changes.

	Collectively the following fix DTED bug 233252.

	* ogdi/c-api/ecstile.c: fixed round off errors in calculation
	of t->linelength, and placed coord.x/y at center of pixel instead of
	the corner.

	* ogdi/drvers/dted/object.c: moved pos_y to the middle of the
	desired row.  Generated errors in unsupported functions.

	* ogdi/drivers/dted/dted.c: fixed bugs with computing nbfeature.

2001-04-16  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/rpf/rpf.c: added capabilities support.

	* makefile, ogdi/include/makefile: added special non-local install
	rules for include files and creating target directories. 

	* config/common.mak, config/generic.mak.in: added non-local install
	support (normally into /usr/local). 

2001-04-12  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/c-api/ogdi.def: added various capabilities related entry points.

	* ogdi/c-api/ecsdist.c, ogdi/include/ecs_util.h:
	Added ecs_GetPixelFromRGB() and ecs_GetRGBFromPixel().

	* test_suite/scripts/rpf: added test for Image support.

	* ogdi/drivers/rpf: rpf.c, rpf.h, object.c, utils.c

	Applied DND Image support patches, and added source headers.
