@@ -1,4 +1,13 @@
+2001-06-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/c-api/ecs_capabililties.c, ogdi/driver/dted/dted.c, 
+	ogdi/driver/vrf/util.c, ogdi/driver/rpf/rpf.c: Fixed capabilities
+	to match 6.2 spec (BoundingBox, resx, resy, LatLongBoundingBox). 
+
 2001-05-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* contrib/ogdi_import/ogdi_import.c: utilize layer capabitilies if 
+	available to set region and resolution.
 
 	* ogdi/drivers/rpf/rpf.c: Modified capabilities returned to have real
 	information about each layer instead of just dummy global bounds info.
